RESOLVED FIXED219932
Calls to setFixedLayoutSize() should not be inside ENABLE(TEXT_AUTOSIZING)
https://bugs.webkit.org/show_bug.cgi?id=219932
Summary Calls to setFixedLayoutSize() should not be inside ENABLE(TEXT_AUTOSIZING)
Simon Fraser (smfr)
Reported 2020-12-15 19:54:12 PST
Calls to setFixedLayoutSize() should be inside ENABLE(TEXT_AUTOSIZING)
Attachments
Patch (3.88 KB, patch)
2020-12-15 19:56 PST, Simon Fraser (smfr)
wenson_hsieh: review+
Simon Fraser (smfr)
Comment 1 2020-12-15 19:56:06 PST
Simon Fraser (smfr)
Comment 2 2020-12-15 20:00:00 PST
Note to self: fix changelog title.
Simon Fraser (smfr)
Comment 3 2020-12-22 08:02:06 PST
Radar WebKit Bug Importer
Comment 4 2020-12-22 08:03:20 PST
Note You need to log in before you can comment on or make changes to this bug.