Calls to setFixedLayoutSize() should not be inside ENABLE(TEXT_AUTOSIZING) https://bugs.webkit.org/show_bug.cgi?id=219932

Reviewed by Wenson Hsieh.

We always want to call setFixedLayoutSize(), whether or not ENABLE(TEXT_AUTOSIZING) is defined.

For code simplicity, make resetTextAutosizing() an empty function when ENABLE(TEXT_AUTOSIZING)
is not defined.

* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::dynamicViewportSizeUpdate):
(WebKit::WebPage::resetTextAutosizing):
(WebKit::WebPage::viewportConfigurationChanged):

Canonical link: https://commits.webkit.org/232525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270889 268f45cc-cd09-0410-ab3c-d52691b4dbfc